syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "AuthServer.Shared.Security";

service Sessions {
  rpc ListActiveSessions (google.protobuf.Empty) returns (SessionListReply);
  rpc ListInactiveSessions (google.protobuf.Empty) returns (SessionListReply);
  rpc InvalidateSession (InvalidateSessionRequest) returns (InvalidateSessionReply);
}

message SessionListReply {
  repeated Session sessions = 1;
}

message Session {
  string id = 1;
  string name = 2;
  google.protobuf.Timestamp last_active = 3;
  repeated LocationReply locations = 4;
  google.protobuf.Timestamp signed_in = 5;
  google.protobuf.Timestamp invalidated_at = 6;

  message LocationReply {
    google.protobuf.StringValue country = 1;
    google.protobuf.StringValue city = 2;
    string ip_address = 3;
  }
}

message InvalidateSessionRequest {
  string id = 1;
}

message InvalidateSessionReply {
  bool success = 1;
}